<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy_month"
        android:icon="@drawable/ic_calendar_24"
        android:title="@string/budget_copy_next_month"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline_24"
        android:title="@string/budget_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_24"
        android:title="@string/budget_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_delete_all_month"
                android:title="@string/budget_delete_all_month" />
        </menu>
    </item>
</menu>
